🚧 summary record display pss and licence - wait for back end fix

--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -28,29 +28,33 @@
 
 {% block caseContent %}
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-            <div class="govuk-grid-row">
-                <div class="govuk-grid-column-full">
-                    <h1 class="govuk-heading-l">Probation record</h1>
-                </div>
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full">
+                <h1 class="govuk-heading-l">Probation record</h1>
             </div>
+        </div>
 
-            {% if activeOrders | length %}
-                <h2 class="govuk-heading-m">Current orders <span class="govuk-caption-l govuk-!-font-weight-bold govuk-!-display-inline-block">({{ activeOrders | length }})</span></h2>
-                {%- for order in activeOrders %}
-                    <p class="govuk-body govuk-!-margin-bottom-0">
-                        <a href="record/{{ order.convictionId }}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description + (' (' + order.sentence.length + ' ' + order.sentence.lengthUnits + ')' if order.sentence.length)}}</a>
-                        {% if order.inBreach %}<span class="moj-badge moj-badge--black pac-badge govuk-!-margin-left-1">Breach</span>{% endif %}
-                    </p>
-                    <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">{{ order.offences[0].description }}</p>
-                    <p class="govuk-hint govuk-!-margin-top-1 govuk-!-margin-bottom-4">Started on {{ moment(order.sentence.startDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
+        {% if activeOrders | length %}
+            <h2 class="govuk-heading-m">Current orders <span
+                        class="govuk-caption-l govuk-!-font-weight-bold govuk-!-display-inline-block">({{ activeOrders | length }})</span>
+            </h2>
+            {%- for order in activeOrders %}
+                <p class="govuk-body govuk-!-margin-bottom-0">
+                    <a href="record/{{ order.convictionId }}"
+                       class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description + (' (' + order.sentence.length + ' ' + order.sentence.lengthUnits + ')' if order.sentence.length) }}</a>
+                    {% if order.inBreach %}<span class="moj-badge moj-badge--black pac-badge govuk-!-margin-left-1">Breach</span>{% endif %}
+                </p>
+                <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">{{ order.offences[0].description }}</p>
+                <p class="govuk-hint govuk-!-margin-top-1 govuk-!-margin-bottom-4">Started
+                    on {{ moment(order.sentence.startDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
 
-                    {% if order.requirements and order.requirements | length %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Requirements</h3>
+                {% if order.requirements and order.requirements | length %}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Requirements</h3>
 
-                        <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
+                    <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
                         {%- for requirement in order.requirements %}
                             {% set category = requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description %}
                             {% set subCategory = requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description %}
@@ -59,82 +63,89 @@
                                 {{ ' - ' + requirement.length + ' ' + requirement.lengthUnit if requirement.length > 0 }}
                             </li>
                         {% endfor %}
-                        </ul>
-                    {% endif %}
+                    </ul>
+                {% endif %}
 
-                    {% if order.custodialTypeCode === "B" %}
-                        {% if order.licenceConditions and order.licenceConditions | length %}
-                            <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
-                            <p class="govuk-body">On licence</p>
+                {% if order.licenceConditions and order.licenceConditions | length %}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
+                    <p class="govuk-body">On licence</p>
 
-                            <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
-                            <ul class="govuk-list govuk-list--bullet qa-current-licence-conditions-{{ loop.index0 }}">
-                                {%- for licenceCondition in order.licenceConditions %}
-                                    <li>{{ licenceCondition.description }}</li>
-                                {% endfor %}
-                            </ul>
-                        {% endif %}
-                    {% else %}
-                        {% if order.pssRequirements and order.pssRequirements | length %}
-                            <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
-                            <p class="govuk-body">On post-sentence supervision (PSS)</p>
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
+                    <ul class="govuk-list govuk-list--bullet qa-current-licence-conditions-{{ loop.index0 }}">
+                        {%- for licenceCondition in order.licenceConditions %}
+                            <li>{{ licenceCondition.description }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
 
-                            <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
-                            <ul class="govuk-list govuk-list--bullet qa-current-pss-requirements-{{ loop.index0 }}">
-                                {%- for pssRequirement in order.pssRequirements %}
-                                    <li>{{ pssRequirement.description  + (' - ' + pssRequirement.subTypeDescription if pssRequirement.subTypeDescription | length)}}</li>
-                                {% endfor %}
-                            </ul>
-                        {% endif %}
-                    {% endif %}
+                {% if order.pssRequirements and order.pssRequirements | length %}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
+                    <p class="govuk-body">On post-sentence supervision (PSS)</p>
 
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
+                    <ul class="govuk-list govuk-list--bullet qa-current-pss-requirements-{{ loop.index0 }}">
+                        {%- for pssRequirement in order.pssRequirements %}
+                            <li>{{ pssRequirement.description  + (' - ' + pssRequirement.subTypeDescription if pssRequirement.subTypeDescription | length) }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
 
-                    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible" />
+                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"/>
 
-                {% endfor -%}
+            {% endfor -%}
+        {% endif %}
+
+        {% if previousOrders | length %}
+            {% if params.showAllPreviousOrders === params.caseNo %}
+                {% set limitPreviousOrders = previousOrders | length %}
+            {% else %}
+                {% set limitPreviousOrders = 5 %}
             {% endif %}
 
-            {% if previousOrders | length %}
-                {% if params.showAllPreviousOrders === params.caseNo %}
-                    {% set limitPreviousOrders = previousOrders | length %}
-                {% else %}
-                    {% set limitPreviousOrders = 5 %}
+            <form name="previousOrders" id="previousOrders" method="post">
+                <h2 class="govuk-heading-m{% if activeOrders | length and previousOrders | length %} govuk-!-margin-top-8{% endif %}">
+                    Previous orders <span class="govuk-caption-l govuk-!-font-weight-bold govuk-!-display-inline-block">({{ previousOrders | length }})</span>
+                </h2>
+                <table class="govuk-table govuk-!-margin-bottom-3">
+                    <tbody class="govuk-table__body">
+                    {%- for order in previousOrders | limit(limitPreviousOrders) %}
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell govuk-!-width-two-thirds">
+                                <p class="govuk-body govuk-!-margin-bottom-0 qa-previous-order-{{ loop.index }}"><a
+                                            href="record/{{ order.convictionId }}"
+                                            class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description + (' (' + order.sentence.length + ' ' + order.sentence.lengthUnits + ')' if order.sentence.length ) }}</a>
+                                </p>
+                                <p class="govuk-body govuk-!-margin-top-0 govuk-!-margin-bottom-0 qa-previous-order-{{ loop.index }}-offence">{{ order.offences[0].description }}</p>
+                            </td>
+                            <td class="govuk-table__cell govuk-table__cell--numeric govuk-!-width-one-third"
+                                style="vertical-align: bottom">
+                                <p class="govuk-hint govuk-!-margin-bottom-0 qa-termination-date qa-previous-order-{{ loop.index }}-end-date">
+                                    Ended
+                                    on {{ moment(order.sentence.terminationDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
+                            </td>
+                        </tr>
+                    {% endfor -%}
+                    </tbody>
+                </table>
+                {% if previousOrders | length > limitPreviousOrders %}
+                    <button type="submit" class="govuk-button govuk-button--secondary">Show all previous orders</button>
                 {% endif %}
-                <form name="previousOrders" id="previousOrders" method="post">
-                    <h2 class="govuk-heading-m{% if activeOrders | length and previousOrders | length %} govuk-!-margin-top-8{% endif %}">Previous orders <span class="govuk-caption-l govuk-!-font-weight-bold govuk-!-display-inline-block">({{ previousOrders | length }})</span></h2>
-                    <table class="govuk-table govuk-!-margin-bottom-3">
-                        <tbody class="govuk-table__body">
-                            {%- for order in previousOrders | limit(limitPreviousOrders) %}
-                                <tr class="govuk-table__row">
-                                    <td class="govuk-table__cell govuk-!-width-two-thirds">
-                                        <p class="govuk-body govuk-!-margin-bottom-0 qa-previous-order-{{ loop.index }}"><a href="record/{{ order.convictionId }}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description + (' (' + order.sentence.length + ' ' + order.sentence.lengthUnits + ')' if order.sentence.length )}}</a></p>
-                                        <p class="govuk-body govuk-!-margin-top-0 govuk-!-margin-bottom-0 qa-previous-order-{{ loop.index }}-offence">{{ order.offences[0].description }}</p>
-                                    </td>
-                                    <td class="govuk-table__cell govuk-table__cell--numeric govuk-!-width-one-third" style="vertical-align: bottom">
-                                        <p class="govuk-hint govuk-!-margin-bottom-0 qa-termination-date qa-previous-order-{{ loop.index }}-end-date">Ended on {{ moment(order.sentence.terminationDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
-                                    </td>
-                                </tr>
-                            {% endfor -%}
-                        </tbody>
-                    </table>
-                    {% if previousOrders | length > limitPreviousOrders %}
-                        <button type="submit" class="govuk-button govuk-button--secondary">Show all previous orders</button>
-                    {% endif %}
-                </form>
+            </form>
+        {% endif %}
+
+    </div>
+
+    <div class="govuk-grid-column-one-third govuk-!-padding-left-9 govuk-!-padding-top-9">
+        <div class="govuk-!-margin-bottom-6">
+
+            {% if data.probationStatus === "Current" %}
+                <h3 class="govuk-heading-s">Offender Manager</h3>
+                {% if offenderManager.allocatedDate %}
+                    <p class="govuk-body govuk-!-margin-bottom-0">{{ offenderManager.forenames }} {{ offenderManager.surname }}</p>
+                    <p class="govuk-hint govuk-!-margin-top-1">Allocated
+                        on {{ moment(offenderManager.allocatedDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
+                {% endif %}
             {% endif %}
-
-        </div>
-
-        <div class="govuk-grid-column-one-third govuk-!-padding-left-9 govuk-!-padding-top-9">
-            <div class="govuk-!-margin-bottom-6">
-
-                {% if data.probationStatus === "Current" %}
-                    <h3 class="govuk-heading-s">Offender Manager</h3>
-                    {% if offenderManager.allocatedDate %}
-                        <p class="govuk-body govuk-!-margin-bottom-0">{{ offenderManager.forenames }} {{ offenderManager.surname }}</p>
-                        <p class="govuk-hint govuk-!-margin-top-1">Allocated on {{ moment(offenderManager.allocatedDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
-                    {% endif %}
-                {% endif %}
 
             {% if probationDocuments | length %}
                 {% set latestDocument = probationDocuments | sort(true, false, 'completedDate') | first %}
@@ -157,10 +168,12 @@
 
             {% if communityData.assessment | length %}
                 <h3 class="govuk-heading-s govuk-!-margin-top-6">Last OASys assessment</h3>
-                <p class="govuk-body govuk-!-margin-bottom-0">OASys Assessment {{ communityData.assessment.type | capitalize | replace("_", " ") }}</p>
-                <p class="govuk-hint govuk-!-margin-top-1">Completed on {{ params.moment(communityData.assessment.completed, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
+                <p class="govuk-body govuk-!-margin-bottom-0">OASys
+                    Assessment {{ communityData.assessment.type | capitalize | replace("_", " ") }}</p>
+                <p class="govuk-hint govuk-!-margin-top-1">Completed
+                    on {{ params.moment(communityData.assessment.completed, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
             {% endif %}
         </div>
     </div>
 
-{% endblock %}
+    {% endblock %}
