--- a/server/views/match-unlink.njk
+++ b/server/views/match-unlink.njk
@@ -11,7 +11,7 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-4">Linked nDelius record</h2>
 
-        <form method="get" action="/match/defendant/{{ params.caseNo }}/nomatch/unlink" novalidate>
+        <form method="get" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/nomatch/unlink" novalidate>
             <dl class="govuk-summary-list">
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Name</dt>
