--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -52,7 +52,7 @@
     items: [
       {
         text: 'Cases',
-        href: '/cases',
+        href: '/' + params.courtCode + '/cases',
         active: title === 'Cases'
       }
     ],
