--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -33,7 +33,7 @@
         {{ offences.push('</ol>') }}
     {% endif %}
     {%- set tableRow = [
-            { text: ('<a href="/case/' + item.caseNo + '/summary" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + item.defendantName | escape + '</a>') | safe },
+            { text: ('<a href="/' + params.courtCode + '/case/' + item.caseNo + '/summary" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + item.defendantName | escape + '</a>') | safe },
             { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible nDelius Record</span>' | safe if notMatched ) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched) + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate, 'YYYY-MM-DD').format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
             { text: offences | join('') | safe },
             { text: item.listNo },
@@ -100,14 +100,14 @@
 
 {%- set listTabs = [{
     title: 'Case list',
-    link: '/cases/' + today,
+    link: '/' + params.courtCode + '/cases/' + today,
     current: params.subsection === ''
 }] -%}
 
 {% if params.addedCount > 0 %}
     {{ listTabs.push({
         title: 'Recently added',
-        link: '/cases/' + today + '/added',
+        link: '/' + params.courtCode + '/cases/' + today + '/added',
         current: params.subsection === 'added',
         count: params.addedCount
     }) }}
@@ -115,7 +115,7 @@
 {% if params.removedCount > 0 %}
     {{ listTabs.push({
         title: 'Removed cases',
-        link: '/cases/' + today + '/removed',
+        link: '/' + params.courtCode + '/cases/' + today + '/removed',
         current: params.subsection === 'removed',
         count: params.removedCount
     }) }}
@@ -138,7 +138,7 @@
 
     <p class="govuk-!-margin-bottom-7">
         {% if currentDate.isAfter(moment()) %}
-            <a class="pac-pagination-link govuk-!-margin-right-5" href="/cases/{{ params.addBusinessDays(currentDate, -1).format('YYYY-MM-DD') }}">
+            <a class="pac-pagination-link govuk-!-margin-right-5" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, -1).format('YYYY-MM-DD') }}">
                 <svg class="pac-pagination-link--icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path fill="currentColor" d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
                 </svg>
@@ -146,7 +146,7 @@
             </a>
         {% endif %}
         {% if withinDateRange %}
-            <a class="pac-pagination-link" href="/cases/{{ params.addBusinessDays(currentDate, 1).format('YYYY-MM-DD') }}">
+            <a class="pac-pagination-link" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, 1).format('YYYY-MM-DD') }}">
                 <span class="pac-pagination-link--next pac-pagination-link--text">Next day</span>
                 <svg class="pac-pagination-link--icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path fill="currentColor" d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -159,7 +159,7 @@
         {%- from "components/inset-text/macro.njk" import insetText -%}
         {{ insetText({
             linkText: "Review defendants with possible nDelius records",
-            link: "/match/bulk/" + params.date,
+            link: '/' + params.courtCode + "/match/bulk/" + params.date,
             text: params.unmatchedRecords + " defendants partially match existing records and need review."
         }) }}
     {% endif %}
