--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -3,13 +3,13 @@
 
         <div class="pac-key-details-bar__right-block">
             {% if params.probationStatus == 'No record' %}
-                <form method="get" action="/match/defendant/{{ params.caseNo }}/manual">
+                <form method="get" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/manual">
                     <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0"
                             data-module="govuk-button" type="submit">Link nDelius record
                     </button>
                 </form>
                 {% elif params.crn | length and not params.hideUnlinkButton %}
-                <form method="get" action="/match/defendant/{{ params.caseNo }}/unlink/{{ params.crn }}">
+                <form method="get" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/unlink/{{ params.crn }}">
                     <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0"
                             data-module="govuk-button" type="submit">Unlink nDelius record
                     </button>
