--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -1,9 +1,9 @@
 {% extends "partials/layout.njk" %}
 
 {% if session.matchType === 'bulk' %}
-    {%- set backUrl = '/match/' + session.matchType + '/' + session.matchDate -%}
+    {%- set backUrl = '/' + params.courtCode + '/match/' + session.matchType + '/' + session.matchDate -%}
 {% else %}
-    {%- set backUrl = '/case/' + data.caseNo + '/summary' -%}
+    {%- set backUrl = '/' + params.courtCode + '/case/' + data.caseNo + '/summary' -%}
 {% endif %}
 
 {% block backlink %}
@@ -176,7 +176,7 @@
         </div>
 
         {% from "govuk/components/details/macro.njk" import govukDetails %}
-        {%- set detailsText = "<p class=\"govuk-body\">If the defendant is unknown to probation, you must <a href=\"/match/defendant/" + params.caseNo + "/nomatch\" class=\"govuk-link govuk-link--no-visited-state\">confirm they have no record</a>.</p><p class=\"govuk-body\">If they have an nDelius record, you can <a href=\"/match/defendant/" + params.caseNo + "/manual\" class=\"govuk-link govuk-link--no-visited-state\">link it to them with a case reference number</a>.</p>" -%}
+        {%- set detailsText = "<p class=\"govuk-body\">If the defendant is unknown to probation, you must <a href=\"/" + params.courtCode + "/match/defendant/" + params.caseNo + "/nomatch\" class=\"govuk-link govuk-link--no-visited-state\">confirm they have no record</a>.</p><p class=\"govuk-body\">If they have an nDelius record, you can <a href=\"/" + params.courtCode + "/match/defendant/" + params.caseNo + "/manual\" class=\"govuk-link govuk-link--no-visited-state\">link it to them with a case reference number</a>.</p>" -%}
         {{ govukDetails({
             classes: "govuk-!-margin-top-6",
             summaryText: "Can't see the correct record?",
