--- a/server/views/select-court.njk
+++ b/server/views/select-court.njk
@@ -6,7 +6,7 @@
 
     <form method="post" name="selectCourt" novalidate>
 
-    <h1 class="govuk-heading-l">Select court</h1>
+    <h1 class="govuk-heading-l">Select a court</h1>
 
         <p class="govuk-body-l govuk-!-margin-bottom-2"><a href="/select-court/B14LO00" class="govuk-link govuk-link--no-visited-state">Sheffield Magistrates' Court</a></p>
         <p class="govuk-body-l govuk-!-margin-bottom-2"><a href="/select-court/B10JQ00" class="govuk-link govuk-link--no-visited-state">North Tyneside Magistrates' Court</a></p>
