Pic364 - PSS and Licence Condition appearing BOTH on summary and order (#188)
* :bug: Display licence conditions and pss requirements separatly

* Display on record order licence condition OR pss

* 🚧 summary record display pss but not licence conditions

* 🚧 summary record display pss and licence - wait for back end fix

* To close the ticket 364: pss AND licenceCond appears on the summary and the order screen

* Update BDD

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -180,17 +180,28 @@
                 </div>
             </div>
 
-            {% if currentOrder.licenceConditions | length %}
-                <h2 class="govuk-heading-m govuk-!-margin-top-8">{{"Licence conditions" if custodialOrder.custodialTypeCode === "B" else "Post-sentence supervision requirements"}}</h2>
-                <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
-                    {%- for licenceConditions in currentOrder.licenceConditions %}
-                        <li>
-                            {{ licenceConditions.licenceConditionTypeMainCat.description }}
-                        </li>
-                    {% endfor %}
-                </ul>
-                <a href="" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
-            {% endif %}
+                {% if currentOrder.licenceConditions | length %}
+                    <h2 class="govuk-heading-m govuk-!-margin-top-8">Licence conditions</h2>
+                    <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
+                        {%- for licenceConditions in currentOrder.licenceConditions %}
+                            <li>
+                                {{ licenceConditions.description }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <a href="" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
+                {% endif %}
+
+                {% if currentOrder.pssRequirements | length %}
+                    <h2 class="govuk-heading-m govuk-!-margin-top-8">Post-sentence supervision requirements</h2>
+                    <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
+                        {%- for pssRequirement in currentOrder.pssRequirements %}
+                            <li>
+                                {{ pssRequirement.description  + (' - ' + pssRequirement.subTypeDescription if pssRequirement.subTypeDescription | length) }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
 
             {% if currentOrder.requirements | length %}
                 <h2 class="govuk-heading-m govuk-!-margin-top-8">Requirements</h2>
