--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -78,10 +78,10 @@
             {{ attendedAppointments.failed.push(attendance) }}
         {% elif attendance.attended | string === "false" and attendance.complied | string === "true" %}
             {{ absentAppointments.complied.push(attendance) }}
-        {% elif attendance.attended | string === "false" and attendance.complied | string === "false" and attendance.outcome %}
-            {{ absentAppointments.failed.push(attendance) }}
-        {% else %}
+        {% elif attendance.attended | string === "false" and attendance.complied | string === "false" and attendance.outcome | string === "IAPS deleted record" %}
             {{ awaitingOutcome.push(attendance) }}
+        {% else %}
+            {{ absentAppointments.failed.push(attendance) }}
         {% endif %}
     {% endfor %}
 
