--- a/server/views/case-summary-risk.njk
+++ b/server/views/case-summary-risk.njk
@@ -1,9 +1,10 @@
 {% extends "partials/case-details.njk" %}
 
 {%- set riskData = data.riskData -%}
+{%- set items = data.items -%}
 {%- set activeRisks = [] -%}
 {%- set inactiveRisks = [] -%}
-{%- for risk in riskData.registrations if riskData.registrations | length %}
+{%- for risk in riskData  if riskData %}
     {% if risk.active %}
         {{ activeRisks.push(risk) }}
     {% endif %}
@@ -19,7 +20,6 @@
         <div class="govuk-grid-column-full">
 
             <h2 class="govuk-heading-l govuk-!-margin-bottom-7">Risk register</h2>
-
 
             <div class="govuk-tabs" data-module="govuk-tabs">
                 <ul class="govuk-tabs__list">
